fix list width on mobile
because scrollbars are bad

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -197,7 +197,7 @@
 
   > li {
     display: block;
-    width: 100%;
+    //width: 100%;
     margin: 0.3em;
     padding: 0.5em 0.5em;
     text-align: center;
